--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -3,6 +3,7 @@
 <head>
   <base href="%PUBLIC_URL%/">
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
   <title>Cafe Variome 2</title>
 </head>
 <body>
